--- a/web/app/assets/stylesheets/components/me-chip-set.scss
+++ b/web/app/assets/stylesheets/components/me-chip-set.scss
@@ -28,6 +28,11 @@
     }
   }
 
+  .me-section__description & {
+    padding: 0;
+    margin: 0 -4px;
+  }
+
   .me-collection__title-custom & {
     padding: 0;
     @include mobile-only {
