--- a/web/app/views/layouts/dashboard.html.erb
+++ b/web/app/views/layouts/dashboard.html.erb
@@ -5,85 +5,59 @@
 		<script crossorigin="anonymous" rel="preload" src="https://polyfill.io/v3/polyfill.min.js?flags=gated&rum=true&features=Element.prototype.closest%2CIntersectionObserverEntry%2CIntersectionObserver%2CMutationObserver%2Cfetch%2CrequestAnimationFrame%2CrequestIdleCallback%2CArray.prototype.forEach"></script>
 	<% end %>
 
-  <title><%= meta_title %></title>
+	<title><%= meta_title %></title>
 
-  <meta name="theme-color" content="#ffffff"/>
-  <meta name="viewport"
-        content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+	<meta name="theme-color" content="#ffffff"/>
+	<meta name="viewport"
+				content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 
-  <%= render partial: 'layouts/meta-tags' %>
+	<%= render partial: 'layouts/meta-tags' %>
 
-  <%= canonical_url %>
-  <%= amp_url %>
+	<%= canonical_url %>
+	<%= amp_url %>
 
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
+	<%= csrf_meta_tags %>
+	<%= csp_meta_tag %>
 
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="Alegreme">
-  <link rel="apple-touch-icon" href="<%= image_url 'icons/launcher-icon-180x180.png' %>">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<meta name="apple-mobile-web-app-title" content="Alegreme">
+	<link rel="apple-touch-icon" href="<%= image_url 'icons/launcher-icon-180x180.png' %>">
 
-  <%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-48x48.png', {sizes: "48x48", type: "image/png"} %>
-  <%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-96x96.png', {sizes: "96x96", type: "image/png"} %>
-  <%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-144x144.png', {sizes: "144x144", type: "image/png"} %>
+	<%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-48x48.png', {sizes: "48x48", type: "image/png"} %>
+	<%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-96x96.png', {sizes: "96x96", type: "image/png"} %>
+	<%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-144x144.png', {sizes: "144x144", type: "image/png"} %>
 
-  <link rel="manifest" href="<%= asset_url 'manifest.json' %>"/>
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+	<link rel="manifest" href="<%= asset_url 'manifest.json' %>"/>
+	<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Varela+Round|Roboto:300,400,500,700&display=swap">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Varela+Round|Roboto:300,400,500,700&display=swap">
 
-  <%= Gon::Base.render_data %>
+	<%= Gon::Base.render_data %>
 
-  <%= javascript_pack_tag 'dashboard', 'data-turbolinks-track': 'reload', defer: true %>
-  <%#= javascript_pack_tag 'train', 'data-turbolinks-track': 'reload', defer: true if params[:action] == 'train' %>
+	<%= javascript_pack_tag 'dashboard', 'data-turbolinks-track': 'reload', defer: true %>
+	<%#= javascript_pack_tag 'train', 'data-turbolinks-track': 'reload', defer: true if params[:action] == 'train' %>
 
 
 </head>
 <body>
 
-<div class="me-top-app-bar__fake-size"></div>
+<%= render partial: "layouts/top-app-bar" %>
+<section class="me-page me-page--justify-center">
+	<%= yield %>
+</section>
 
-<% if params['controller'] == 'devise/sessions' || current_page?(controller: 'feeds', action: 'index') %>
-  <%= render partial: "layouts/top-app-bar" %>
-  <%= render partial: "feeds/float_menu" %>
-  <section class="me-page me-page--feed is-animated">
-    <!--    <div class="me-overlay"></div>-->
-    <%= yield %>
-  </section>
-<% elsif params['controller'] == 'events' && params['action'] == 'show' %>
-  <%= render partial: "layouts/top-app-bar", locals: {controller: 'events'} %>
-  <section class="me-page me-page--centralized is-animated">
-    <!--    <div class="me-overlay"></div>-->
-    <%= yield %>
-  </section>
-<% elsif params['controller'] == 'feeds' && params['action'] == 'train' %>
-  <%= render partial: "layouts/top-app-bar" %>
-  <section class="me-page me-page--train-section">
-    <%#= render partial: 'layouts/bot' %>
-    <!--    <div class="me-overlay"></div>-->
-    <%= yield %>
-  </section>
-<% else %>
-  <%= render partial: "layouts/top-app-bar" %>
-  <section class="me-page  is-animated">
-    <%#= render partial: 'layouts/bot' %>
-    <!--    <div class="me-overlay"></div>-->
-    <%= yield %>
-  </section>
-<% end %>
-<!--</div>-->
 <% if notice %>
-  <div data-controller="snackbar" class="me-snackbar mdc-snackbar">
-    <div class="mdc-snackbar__surface">
-      <div class="mdc-snackbar__label" role="status" aria-live="polite">
-        <%= notice %>
-      </div>
-      <div class="mdc-snackbar__actions">
-        <button class="mdc-icon-button mdc-snackbar__dismiss material-icons" title="Dismiss">close</button>
-      </div>
-    </div>
-  </div>
+	<div data-controller="snackbar" class="me-snackbar mdc-snackbar">
+		<div class="mdc-snackbar__surface">
+			<div class="mdc-snackbar__label" role="status" aria-live="polite">
+				<%= notice %>
+			</div>
+			<div class="mdc-snackbar__actions">
+				<button class="mdc-icon-button mdc-snackbar__dismiss material-icons" title="Dismiss">close</button>
+			</div>
+		</div>
+	</div>
 <% end %>
 <%= render partial: 'layouts/footer' %>
 </body>
