--- a/web/app/views/users/show.html.erb
+++ b/web/app/views/users/show.html.erb
@@ -25,6 +25,21 @@
 		<% end %>
 	</div>
 
+	<% if current_user.admin? %>
+		<div class="me-section">
+			<div class="me-section__inner">
+				<div class="me-section__title">
+					Admin
+				</div>
+				<div class="me-section__description">
+					<%= link_to 'Dashboard', dashboard_path, class: 'me-chip mdc-chip' %>
+					<%= link_to 'Usuários', admin_users_path, class: 'me-chip mdc-chip' %>
+					<%= link_to 'Treinar', train_path, class: 'me-chip mdc-chip' %>
+				</div>
+			</div>
+		</div>
+	<% end %>
+
 	<%= render partial: "components/collection/events/collection", layout: "components/section", locals: {
 			collection: @collection_upcoming
 	} %>
@@ -35,10 +50,12 @@
 
 	<section class="me-section">
 		<div class="me-section__inner">
-			<h2 class="me-section__title">Tópicos que <%= current_user == @user ? 'você' : @user.first_name %> segue</h2>
+			<h2 class="me-section__title">
+				Tópicos que <%= current_user == @user ? 'você' : @user.first_name %> segue
+			</h2>
 			<% if @user.following_topics.present? %>
-				<div class="me-chip-set__wrapper">
-					<div class="me-chip-set me-chip-set--with-padding mdc-chip-set">
+				<div class="me-section__description">
+					<div class="me-chip-set mdc-chip-set">
 						<% @user.following_topics.sort_by { |topic| topic.events.active.size }.reverse!.each do |topic| %>
 							<a href="<%= link_to_topic topic %>" class="me-chip mdc-chip <%= 'new' if topic.events.active.any? { |event| @user.last_sign_in_at < event.created_at } %>">
 								<%= topic.details_name.titleize %>
@@ -56,33 +73,33 @@
 	</section>
 
 	<%# if @user.followers['users_total_followers'] > 0 %>
-<!--		<div class="me-section">-->
-<!--			<div class="me-section__inner">-->
-<!--				<div class="me-section__title me-user-profile__follow-counter">-->
-					<%#= @user.followers['users_total_followers'] > 1 ? "#{@user.followers['users_total_followers']} seguidores" : "#{@user.followers['users_total_followers']} seguidor" %>
-<!--				</div>-->
+	<!--		<div class="me-section">-->
+	<!--			<div class="me-section__inner">-->
+	<!--				<div class="me-section__title me-user-profile__follow-counter">-->
+	<%#= @user.followers['users_total_followers'] > 1 ? "#{@user.followers['users_total_followers']} seguidores" : "#{@user.followers['users_total_followers']} seguidor" %>
+	<!--				</div>-->
 
-				<%# if current_user == @user %>
-<!--					<div class="me-user-profile__followers">-->
-<!--						<div class="me-user-suggestions">-->
-<!--							<div class="me-user-suggestions__inner">-->
-								<%# User.where("id IN (?)", @user.followers['users']).order("last_sign_in_at DESC").limit(10).each do |user| %>
-									<%#= link_to user_path user do %>
-<!--										<div class="me-user-suggestions__user">-->
-<!--											<div class="me-user-suggestions__picture" style="background-image: url('<%#= user.picture :small %>')">-->
-<!--											</div>-->
-<!--											<div class="me-user-suggestions__name">-->
-												<%#= user.first_name %>
-<!--											</div>-->
-<!--										</div>-->
-									<%# end %>
-								<%# end %>
-<!--							</div>-->
-<!--						</div>-->
-<!--					</div>-->
-				<%# end %>
-<!--			</div>-->
-<!--		</div>-->
+	<%# if current_user == @user %>
+	<!--					<div class="me-user-profile__followers">-->
+	<!--						<div class="me-user-suggestions">-->
+	<!--							<div class="me-user-suggestions__inner">-->
+	<%# User.where("id IN (?)", @user.followers['users']).order("last_sign_in_at DESC").limit(10).each do |user| %>
+	<%#= link_to user_path user do %>
+	<!--										<div class="me-user-suggestions__user">-->
+	<!--											<div class="me-user-suggestions__picture" style="background-image: url('<%#= user.picture :small %>')">-->
+	<!--											</div>-->
+	<!--											<div class="me-user-suggestions__name">-->
+	<%#= user.first_name %>
+	<!--											</div>-->
+	<!--										</div>-->
+	<%# end %>
+	<%# end %>
+	<!--							</div>-->
+	<!--						</div>-->
+	<!--					</div>-->
+	<%# end %>
+	<!--			</div>-->
+	<!--		</div>-->
 	<%# end %>
 
 </section>
