Refactor in modules to load once

--- a/web/app/views/components/collection/events/_collection.html.erb
+++ b/web/app/views/components/collection/events/_collection.html.erb
@@ -158,7 +158,7 @@
 									<span class="me-card__date-distance-in-words"> · Daqui 2 horas  </span>
 								</div>
 							</div>
-							<div data-fixed="true" class="mdc-card__media mdc-card__media--16-9 lazy-bgimage" style="">
+							<div data-fixed="true" class="mdc-card__media mdc-card__media--16-9" style="">
 								<div class="me-card__like-button" data-action="click->event#like">
 									<div data-target="event.like">
 										<button data-target="event.likeButton" id="add-to-favorites" class="me-icon-button mdc-icon-button mdc-ripple-upgraded--unbounded mdc-ripple-upgraded" aria-label="Add to favorites" aria-hidden="true" aria-pressed="false" style="display: none; --mdc-ripple-fg-size:0px; --mdc-ripple-fg-scale:NaN; --mdc-ripple-left:0px; --mdc-ripple-top:0px;">
