--- a/web/app/views/components/swipable/_swipable.html.erb
+++ b/web/app/views/components/swipable/_swipable.html.erb
@@ -1,64 +1,74 @@
 <div class="me-swipable"
-     data-controller="swipable"
-     data-target="swipable.swipable"
-     data-swipable-chat-on="true"
-     style="">
+		 data-reflex-permanent
+		 data-controller="swipable"
+		 data-target="swipable.swipable"
+		 data-swipable-bot-on="true"
+		 data-swipable-user-name="<%= current_user.try(:first_name) %>"
+		 data-swipable-user-signin-count="<%= current_user&.sign_in_count %>"
+		 data-swipable-user-taste-events-saved="<%= current_user&.taste_events_saved&.size %>"
+		 style="">
 
-  <div class="me-swipable__onboarding"
-       data-target="swipable.onboarding"></div>
+	<div class="me-swipable__onboarding"
+			 data-target="swipable.onboarding"></div>
 
-  <div class="me-swipable__items"
-       data-target="swipable.items">
-    <!-- <div class="me-swipable__question"> -->
-      <!-- <h2>Você iria neste evento?</h2>
-      <span>Indique abaixo os eventos que você iria ou não para já receber sugestões que tem a ver com seu gosto</span> -->
-    <!-- </div> -->
-    <div id="stacked-cards-block" class="stackedcards stackedcards--animatable init">
-      <div class="stackedcards-container">
-        <% @swipable_items.each do |item| %>
-          <div id="<%= item[:id] %>" class="card-item">
-            <div class="me-swipable__item" style="background-image: url('<%= image_url item[:image_url] %>')">
-              <div class="me-swipable__item-overlay"></div>
-              <div class="me-swipable__item-title"><%= item[:name] %></div>
-              <div class="me-swipable__item-description"><%= item[:description] %></div>
-            </div>
-          </div>
-        <% end %>
-      </div>
-      <div class="stackedcards--animatable stackedcards-overlay left">
-        <!-- <i class="material-icons mdc-button__icon" aria-hidden="true">
-          <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/><path d="M10.88 21.94l5.53-5.54c.37-.37.58-.88.58-1.41V5c0-1.1-.9-2-2-2H6c-.8 0-1.52.48-1.83 1.21L.91 11.82C.06 13.8 1.51 16 3.66 16h5.65l-.95 4.58c-.1.5.05 1.01.41 1.37.59.58 1.53.58 2.11-.01zM21 3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2s2-.9 2-2V5c0-1.1-.9-2-2-2z"/></svg>
-        </i> -->
-      </div>
-      <div class="stackedcards--animatable stackedcards-overlay right">
-        <!-- <i class="material-icons mdc-button__icon" aria-hidden="true">
-          <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/><path d="M13.12 2.06L7.58 7.6c-.37.37-.58.88-.58 1.41V19c0 1.1.9 2 2 2h9c.8 0 1.52-.48 1.84-1.21l3.26-7.61C23.94 10.2 22.49 8 20.34 8h-5.65l.95-4.58c.1-.5-.05-1.01-.41-1.37-.59-.58-1.53-.58-2.11.01zM3 21c1.1 0 2-.9 2-2v-8c0-1.1-.9-2-2-2s-2 .9-2 2v8c0 1.1.9 2 2 2z"/></svg>
-        </i> -->
-      </div>
-      <div class="stackedcards--animatable stackedcards-overlay top">
-        <!-- TALVEZ -->
-      </div>
-    </div>
-    <div class="global-actions">
-      <button class="mdc-button mdc-button__icon left-action">
-        <div class="mdc-button__ripple"></div>
-        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/><path d="M10.88 21.94l5.53-5.54c.37-.37.58-.88.58-1.41V5c0-1.1-.9-2-2-2H6c-.8 0-1.52.48-1.83 1.21L.91 11.82C.06 13.8 1.51 16 3.66 16h5.65l-.95 4.58c-.1.5.05 1.01.41 1.37.59.58 1.53.58 2.11-.01zM21 3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2s2-.9 2-2V5c0-1.1-.9-2-2-2z"/></svg>
-      </button>
-      <!-- <button class="mdc-button mdc-button__icon top-action">
-       <i class="material-icons mdc-button__icon" aria-hidden="true">star_rate</i>
-        <div class="mdc-button__ripple"></div>
-        <span class="mdc-button__label" style="opacity: 0.6">Talvez</span>
-      </button> -->
-      <button class="mdc-button mdc-button__icon right-action">
-        <div class="mdc-button__ripple"></div>
-        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/><path d="M13.12 2.06L7.58 7.6c-.37.37-.58.88-.58 1.41V19c0 1.1.9 2 2 2h9c.8 0 1.52-.48 1.84-1.21l3.26-7.61C23.94 10.2 22.49 8 20.34 8h-5.65l.95-4.58c.1-.5-.05-1.01-.41-1.37-.59-.58-1.53-.58-2.11.01zM3 21c1.1 0 2-.9 2-2v-8c0-1.1-.9-2-2-2s-2 .9-2 2v8c0 1.1.9 2 2 2z"/></svg>
-      </button>
-    </div>
-    <!-- <div data-target="swipable.skip" class="me-swipable__skip" data-turbolinks="false"> -->
-      <%#= link_to "Pular esta etapa por agora", feed_path(skip_swipable: true) %>
-    <!-- </div> -->
-  </div>
-  <div class="final-state">
-    <h2>Atualizando recomendações...</h2>
-  </div>
+	<div class="me-swipable__items"
+			 data-target="swipable.items">
+		<!-- <div class="me-swipable__question"> -->
+		<!-- <h2>Você iria neste evento?</h2>
+		<span>Indique abaixo os eventos que você iria ou não para já receber sugestões que tem a ver com seu gosto</span> -->
+		<!-- </div> -->
+		<div id="stacked-cards-block" class="stackedcards stackedcards--animatable init">
+			<div class="stackedcards-container">
+				<% @swipable_items.each do |item| %>
+					<div id="<%= item[:id] %>" class="card-item">
+						<div class="me-swipable__item" style="background-image: url('<%= image_url item[:image_url] %>')">
+							<div class="me-swipable__item-overlay"></div>
+							<div class="me-swipable__item-title"><%= item[:name] %></div>
+							<div class="me-swipable__item-description"><%= item[:description] %></div>
+						</div>
+					</div>
+				<% end %>
+			</div>
+			<div class="stackedcards--animatable stackedcards-overlay left">
+				<!-- <i class="material-icons mdc-button__icon" aria-hidden="true">
+					<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/><path d="M10.88 21.94l5.53-5.54c.37-.37.58-.88.58-1.41V5c0-1.1-.9-2-2-2H6c-.8 0-1.52.48-1.83 1.21L.91 11.82C.06 13.8 1.51 16 3.66 16h5.65l-.95 4.58c-.1.5.05 1.01.41 1.37.59.58 1.53.58 2.11-.01zM21 3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2s2-.9 2-2V5c0-1.1-.9-2-2-2z"/></svg>
+				</i> -->
+			</div>
+			<div class="stackedcards--animatable stackedcards-overlay right">
+				<!-- <i class="material-icons mdc-button__icon" aria-hidden="true">
+					<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/><path d="M13.12 2.06L7.58 7.6c-.37.37-.58.88-.58 1.41V19c0 1.1.9 2 2 2h9c.8 0 1.52-.48 1.84-1.21l3.26-7.61C23.94 10.2 22.49 8 20.34 8h-5.65l.95-4.58c.1-.5-.05-1.01-.41-1.37-.59-.58-1.53-.58-2.11.01zM3 21c1.1 0 2-.9 2-2v-8c0-1.1-.9-2-2-2s-2 .9-2 2v8c0 1.1.9 2 2 2z"/></svg>
+				</i> -->
+			</div>
+			<div class="stackedcards--animatable stackedcards-overlay top">
+				<!-- TALVEZ -->
+			</div>
+		</div>
+		<div class="global-actions">
+			<button class="mdc-button mdc-button__icon left-action">
+				<div class="mdc-button__ripple"></div>
+				<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+					<path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>
+					<path d="M10.88 21.94l5.53-5.54c.37-.37.58-.88.58-1.41V5c0-1.1-.9-2-2-2H6c-.8 0-1.52.48-1.83 1.21L.91 11.82C.06 13.8 1.51 16 3.66 16h5.65l-.95 4.58c-.1.5.05 1.01.41 1.37.59.58 1.53.58 2.11-.01zM21 3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2s2-.9 2-2V5c0-1.1-.9-2-2-2z"/>
+				</svg>
+			</button>
+			<!-- <button class="mdc-button mdc-button__icon top-action">
+			 <i class="material-icons mdc-button__icon" aria-hidden="true">star_rate</i>
+				<div class="mdc-button__ripple"></div>
+				<span class="mdc-button__label" style="opacity: 0.6">Talvez</span>
+			</button> -->
+			<button class="mdc-button mdc-button__icon right-action">
+				<div class="mdc-button__ripple"></div>
+				<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+					<path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>
+					<path d="M13.12 2.06L7.58 7.6c-.37.37-.58.88-.58 1.41V19c0 1.1.9 2 2 2h9c.8 0 1.52-.48 1.84-1.21l3.26-7.61C23.94 10.2 22.49 8 20.34 8h-5.65l.95-4.58c.1-.5-.05-1.01-.41-1.37-.59-.58-1.53-.58-2.11.01zM3 21c1.1 0 2-.9 2-2v-8c0-1.1-.9-2-2-2s-2 .9-2 2v8c0 1.1.9 2 2 2z"/>
+				</svg>
+			</button>
+		</div>
+		<!-- <div data-target="swipable.skip" class="me-swipable__skip" data-turbolinks="false"> -->
+		<%#= link_to "Pular esta etapa por agora", feed_path(skip_swipable: true) %>
+		<!-- </div> -->
+	</div>
+	<div class="final-state">
+		<h2>Atualizando recomendações...</h2>
+	</div>
 </div>
