--- a/web/app/assets/stylesheets/components/me-bottom-navigation.scss
+++ b/web/app/assets/stylesheets/components/me-bottom-navigation.scss
@@ -7,7 +7,7 @@
   background: darken($surface-color, 1%);
   box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.2);
   will-change: transform;
-  transition: transform 250ms ease;
+  transition: transform $animation-time-medium ease;
   @include desktop-only {
     display: none;
   }
