--- a/web/app/views/components/swipable/_swipable.html.erb
+++ b/web/app/views/components/swipable/_swipable.html.erb
@@ -2,6 +2,7 @@
 		 data-reflex-permanent
 		 data-controller="swipable"
 		 data-target="swipable.swipable"
+		 data-swipable-hidden="true"
 		 data-swipable-bot-on="true"
 		 data-swipable-user-name="<%= current_user.try(:first_name) %>"
 		 data-swipable-user-signin-count="<%= current_user&.sign_in_count %>"
