--- a/web/app/assets/stylesheets/components/me-event-single.scss
+++ b/web/app/assets/stylesheets/components/me-event-single.scss
@@ -1,5 +1,3 @@
-
-
 @mixin is-clickable {
   background: whitesmoke;
   padding: 4px 8px;
@@ -75,8 +73,22 @@
     }
   }
 
+  &__updated-at {
+    color: $font-tertiary-color;
+    font-weight: 300;
+    font-size: 11px;
+    padding: 0 $section-padding-phone;
+    margin: 8px 0 4px 0;
+    text-align: center;
+  }
+
   &__head {
     position: relative;
+    @include mobile-only {
+      border-top-left-radius: 16px;
+      border-top-right-radius: 16px;
+      overflow: hidden;
+    }
   }
 
   &__content {
@@ -113,7 +125,8 @@
     font-size: 28px;
     color: $font-primary-color;
     margin: 0;
-    @include with-divider;
+    border-bottom: 1px solid $border-color;
+    padding: 0px 0 24px;
     @include mobile-only {
       font-size: 18px;
       text-align: center;
@@ -177,7 +190,7 @@
     font-style: normal;
     font-size: 12px;
     //& a {
-      //@include is-clickable;
+    //@include is-clickable;
     //}
 
     &-title {
@@ -195,7 +208,8 @@
 
     & i {
       float: left;
-      margin: 0 10px 0 0;
+      margin: 0 15px 0 0;
+      align-self: center;
     }
 
     //& span {
@@ -278,6 +292,7 @@
         padding: 24px;
         border-bottom: 1px solid $border-color;
       }
+
       &:last-child {
         @include mobile-only {
           border-bottom: none;
