--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -57,14 +57,6 @@
 }
 
 
-
-
-
-
-
-
-
-
 </script>
 
 <script type="application/ld+json">
@@ -108,114 +100,110 @@
 }
 
 
-
-
-
 </script>
 
 <section class="me-page me-page--centralized is-animated">
-	<div class="me-section me-section--full">
-		<div class="me-section__inner">
-			<div id="event" class="me-event-single me-event-single event-<%= @event.id %>"
-					 data-controller="event"
-					 data-target="event.event"
-					 data-event-favorited="<%= current_user and current_user.taste_events_saved?(@event.id) if current_user and current_user %>"
-					 data-event-identifier="<%= @event.id %>"
-					 data-event-description-open="false"
-					 data-event-modifier="single">
+	<div id="event" class="me-event-single me-event-single event-<%= @event.id %>"
+			 data-controller="event"
+			 data-target="event.event"
+			 data-event-favorited="<%= current_user and current_user.taste_events_saved?(@event.id) if current_user and current_user %>"
+			 data-event-identifier="<%= @event.id %>"
+			 data-event-description-open="false"
+			 data-event-modifier="single">
 
-				<% unless mobile_device? %>
-					<div class="me-event-single__breadcrumb me-chip-set mdc-chip-set me-chip-set--small">
-						<%= link_to "Porto Alegre", city_events_url, class: 'me-chip mdc-chip' %>
-						<%= link_to @event.categories_primary_name, category_events_url(@event.categories_primary_name), class: 'me-chip mdc-chip' %>
-						<%= link_to I18n.l(@event.day_of_week['date'], format: :long), day_events_url(@event.day_of_week['date'].strftime('%d-%m-%Y')), class: 'me-chip mdc-chip' %>
-						<%= link_to limit_place_name_size(@event.place_details_name, 30), place_path(@event.place), class: 'me-chip mdc-chip' %>
-					</div>
-				<% end %>
+		<% unless mobile_device? %>
+			<div class="me-event-single__breadcrumb me-chip-set mdc-chip-set me-chip-set--small">
+				<%= link_to "Porto Alegre", city_events_url, class: 'me-chip mdc-chip' %>
+				<%= link_to @event.categories_primary_name, category_events_url(@event.categories_primary_name), class: 'me-chip mdc-chip' %>
+				<%= link_to I18n.l(@event.day_of_week['date'], format: :long), day_events_url(@event.day_of_week['date'].strftime('%d-%m-%Y')), class: 'me-chip mdc-chip' %>
+				<%= link_to limit_place_name_size(@event.place_details_name, 30), place_path(@event.place), class: 'me-chip mdc-chip' %>
+			</div>
+		<% end %>
 
-				<div class="me-event-single__head">
-					<% if current_user %>
-						<div data-controller="save-button"
-								 data-action="click->save-button#like"
-								 data-save-button-resource-name="<%= @event.class.name.tableize %>"
-								 data-save-button-resource-id="<%= @event.id %>"
-								 data-save-button-saved="<%= current_user.taste_events_saved? @event.id %>"
-								 class="me-card__like-button">
-							<button data-target="save-button.button"
-											id="add-to-favorites"
-											class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_user.taste_events_saved?(@event.id) %>"
-											aria-label="Add to favorites"
-											aria-hidden="true"
-											aria-pressed="false"
-											style="<%= 'display: inline' if current_user.taste_events_saved?(@event.id) %>">
-								<i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">
-									<svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M9.99165 15.4562C9.33798 16.0496 8.33168 16.0496 7.67801 15.4476L7.5834 15.3616C3.06793 11.2761 0.117822 8.60127 0.229634 5.26412C0.281239 3.80197 1.02952 2.40003 2.24224 1.57434C4.51288 0.0261801 7.31677 0.748655 8.83053 2.52044C10.3443 0.748655 13.1482 0.0175793 15.4188 1.57434C16.6315 2.40003 17.3798 3.80197 17.4314 5.26412C17.5518 8.60127 14.5931 11.2762 10.0777 15.3788L9.99165 15.4562Z"/>
-									</svg>
-								</i>
-								<i class="material-icons-sharp mdc-icon-button__icon">
-									<svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M9.99165 15.4562C9.33798 16.0496 8.33168 16.0496 7.67801 15.4476L7.5834 15.3616C3.06793 11.2761 0.117822 8.60127 0.229634 5.26412C0.281239 3.80197 1.02952 2.40003 2.24224 1.57434C4.51288 0.0261801 7.31677 0.748655 8.83053 2.52044C10.3443 0.748655 13.1482 0.0175793 15.4188 1.57434C16.6315 2.40003 17.3798 3.80197 17.4314 5.26412C17.5518 8.60127 14.5931 11.2762 10.0777 15.3788L9.99165 15.4562Z"/>
-									</svg>
-								</i>
-							</button>
-						</div>
-					<% end %>
-					<div class="me-event-single__media" style="<%= get_image_style_attr @event %>">
-						<img src="<%= @event.image[:original].url(public: true) %>" alt="<%= @event.details_name %>">
-					</div>
+		<div class="me-event-single__head">
+			<% if current_user %>
+				<div data-controller="save-button"
+						 data-action="click->save-button#like"
+						 data-save-button-resource-name="<%= @event.class.name.tableize %>"
+						 data-save-button-resource-id="<%= @event.id %>"
+						 data-save-button-saved="<%= current_user.taste_events_saved? @event.id %>"
+						 class="me-card__like-button">
+					<button data-target="save-button.button"
+									id="add-to-favorites"
+									class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_user.taste_events_saved?(@event.id) %>"
+									aria-label="Add to favorites"
+									aria-hidden="true"
+									aria-pressed="false"
+									style="<%= 'display: inline' if current_user.taste_events_saved?(@event.id) %>">
+						<i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">
+							<svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M9.99165 15.4562C9.33798 16.0496 8.33168 16.0496 7.67801 15.4476L7.5834 15.3616C3.06793 11.2761 0.117822 8.60127 0.229634 5.26412C0.281239 3.80197 1.02952 2.40003 2.24224 1.57434C4.51288 0.0261801 7.31677 0.748655 8.83053 2.52044C10.3443 0.748655 13.1482 0.0175793 15.4188 1.57434C16.6315 2.40003 17.3798 3.80197 17.4314 5.26412C17.5518 8.60127 14.5931 11.2762 10.0777 15.3788L9.99165 15.4562Z"/>
+							</svg>
+						</i>
+						<i class="material-icons-sharp mdc-icon-button__icon">
+							<svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M9.99165 15.4562C9.33798 16.0496 8.33168 16.0496 7.67801 15.4476L7.5834 15.3616C3.06793 11.2761 0.117822 8.60127 0.229634 5.26412C0.281239 3.80197 1.02952 2.40003 2.24224 1.57434C4.51288 0.0261801 7.31677 0.748655 8.83053 2.52044C10.3443 0.748655 13.1482 0.0175793 15.4188 1.57434C16.6315 2.40003 17.3798 3.80197 17.4314 5.26412C17.5518 8.60127 14.5931 11.2762 10.0777 15.3788L9.99165 15.4562Z"/>
+							</svg>
+						</i>
+					</button>
 				</div>
-				<div class="me-event-single__content">
-					<h1 class="me-event-single__name">
-						<%= @event.details_name %>
-					</h1>
-					<div class="me-event-single__primary-section">
-						<div class="me-event-single__place">
-							<% if @event.place %>
-								<i class="material-icons">
-									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-										<path fill="none" d="M0 0h24v24H0V0z"/>
-										<path d="M12 2C8.13 2 5 5.13 5 9c0 4.17 4.42 9.92 6.24 12.11.4.48 1.13.48 1.53 0C14.58 18.92 19 13.17 19 9c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
-									</svg>
-								</i>
-								<div>
-									<div class="me-event-single__date-title me-chip mdc-chip">
-										<%= link_to limit_place_name_size(@event.place_details_name, 30), place_path(@event.place), class: 'me-is-clickable' %>
-									</div>
-									<div>
-										<%= link_to google_maps_url(@event.geographic['address']), class: 'me-event-single__address', target: '_blank', rel: 'noreferrer' do %>
-											<%= limit_address_name_size @event.geographic['address'] %>
-										<% end %>
-									</div>
-								</div>
-							<% end %>
-						</div>
-						<div class="me-event-single__date">
-							<i class="material-icons">
-								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-									<path d="M0 0h24v24H0z" fill="none"/>
-									<path d="M19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM7 10h5v5H7z"/>
-								</svg>
-							</i>
+			<% end %>
+			<div class="me-event-single__media" style="<%= get_image_style_attr @event %>">
+				<img src="<%= @event.image[:original].url(public: true) %>" alt="<%= @event.details_name %>">
+			</div>
+		</div>
+		<div class="me-event-single__content">
+			<div class="me-event-single__updated-at">
+				<%= "Atualizado em: #{I18n.l(@event.updated_at, format: :long)}" %>
+			</div>
+			<h1 class="me-event-single__name">
+				<%= @event.details_name %>
+			</h1>
+			<div class="me-event-single__primary-section">
+				<div class="me-event-single__place">
+					<% if @event.place %>
+						<i class="material-icons">
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+								<path fill="none" d="M0 0h24v24H0V0z"/>
+								<path d="M12 2C8.13 2 5 5.13 5 9c0 4.17 4.42 9.92 6.24 12.11.4.48 1.13.48 1.53 0C14.58 18.92 19 13.17 19 9c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
+							</svg>
+						</i>
+						<div>
+							<div class="me-event-single__date-title me-chip mdc-chip">
+								<%= link_to limit_place_name_size(@event.place_details_name, 30), place_path(@event.place), class: 'me-is-clickable' %>
+							</div>
 							<div>
-								<div class="me-event-single__place-title me-chip mdc-chip">
-									<%= link_to("#{@event.day_of_week['decorator']} #{format_hour @event.first_day_time }", @event.day_of_week['date'].strftime('%d-%m-%Y')) %>
-								</div>
-								<div>
-									<%= @event.first_day_time > DateTime.now ? "Daqui #{distance_of_time_in_words @event.first_day_time, DateTime.now}" : "Iniciou há #{distance_of_time_in_words @event.first_day_time, DateTime.now}" %>
-								</div>
+								<%= link_to google_maps_url(@event.geographic['address']), class: 'me-event-single__address', target: '_blank', rel: 'noreferrer' do %>
+									<%= limit_address_name_size @event.geographic['address'] %>
+								<% end %>
 							</div>
 						</div>
-					</div>
-					<div class="me-event-single__description">
-						<div class="me-event-single__description-wrapper">
-							<%= @event.details_description.html_safe %>
+					<% end %>
+				</div>
+				<div class="me-event-single__date">
+					<i class="material-icons">
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+							<path d="M0 0h24v24H0z" fill="none"/>
+							<path d="M19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM7 10h5v5H7z"/>
+						</svg>
+					</i>
+					<div>
+						<div class="me-event-single__place-title me-chip mdc-chip">
+							<%= link_to("#{@event.day_of_week['decorator']} #{format_hour @event.first_day_time }", @event.day_of_week['date'].strftime('%d-%m-%Y')) %>
 						</div>
-						<button data-action="click->event#readMore" class="mdc-button">
-							<span class="mdc-button__label">MOSTRAR MAIS</span>
-						</button>
+						<div>
+							<%= @event.first_day_time > DateTime.now ? "Daqui #{distance_of_time_in_words @event.first_day_time, DateTime.now}" : "Iniciou há #{distance_of_time_in_words @event.first_day_time, DateTime.now}" %>
+						</div>
 					</div>
 				</div>
+			</div>
+			<div class="me-event-single__description">
+				<div class="me-event-single__description-wrapper">
+					<%= @event.details_description.html_safe %>
+				</div>
+				<button data-action="click->event#readMore" class="mdc-button">
+					<span class="mdc-button__label">MOSTRAR MAIS</span>
+				</button>
 			</div>
 		</div>
 	</div>
