--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -201,8 +201,8 @@
 				<div class="me-event-single__description-wrapper">
 					<%= @event.details_description.html_safe %>
 				</div>
-				<button data-action="click->event#readMore" class="mdc-button">
-					<span class="mdc-button__label">MOSTRAR MAIS</span>
+				<button data-action="click->event#readMore" class="me-button me-button--floating me-button--small mdc-button">
+					<span class="mdc-button__label">Mostrar mais</span>
 				</button>
 			</div>
 		</div>
