--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -12,9 +12,11 @@
 *
 *
 */
+
 @import 'variables';
 @import 'mixins';
 @import 'template';
+@import 'utils';
 
 
 $mdc-typography-font-family: $font-secondary-family;
@@ -73,6 +75,7 @@ amp-social-share.custom-style {
   padding: 6px 12px;
   margin: 0 -12px 0 0;
   outline: none;
+
   & svg {
     fill: $icon-color;
     margin: 0 -3px 0 6px;
