--- a/web/app/assets/stylesheets/components/me-user-suggestions.scss
+++ b/web/app/assets/stylesheets/components/me-user-suggestions.scss
@@ -16,8 +16,8 @@
     grid-auto-flow: column;
     grid-gap: 0 12px;
     padding: 0 24px;
-    @include add-horizontal-scroll-wrapper;
-    @include no-scroll-bar;
+    @include me-add-horizontal-scroll-wrapper;
+    @include me-no-scroll-bar;
     @include desktop-only {
       padding: 0;
     }
@@ -33,7 +33,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    @include add-horizontal-scroll-items;
+    @include me-add-horizontal-scroll-items;
 
     .me-collection__title-custom & {
       width: 36px;
